# voice_ai_agent

./: .dockerignore  Cargo.toml  Dockerfile  README.md  db.sqlite  diesel.toml
migrations/2025-04-06-172705_create_logs/: up.sql
src/: db.rs  llm.rs  main.rs  models.rs  schema.rs
src/routes/: mod.rs  webhook.rs
