[package]
name = "voice_ai_agent"
version = "0.1.0"
edition = "2021"

# Cargo.toml
[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }


